adding service calls instead of another manager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
-find_package(catkin REQUIRED COMPONENTS roscpp nav_msgs geometry_msgs quadrotor_msgs nodelet cmake_modules)
+find_package(catkin REQUIRED COMPONENTS roscpp nav_msgs geometry_msgs quadrotor_msgs nodelet mav_manager cmake_modules)
 find_package(Eigen 3 REQUIRED)
 
 # If mavros_msgs not found, don't build but do not cause a build error
@@ -22,7 +22,7 @@ else()
     INCLUDE_DIRS
     LIBRARIES
     CATKIN_DEPENDS roscpp nav_msgs geometry_msgs quadrotor_msgs mavros_msgs nodelet
-    DEPENDS Eigen)
+    DEPENDS mav_manager Eigen)
     
   #add_library(sub_library rc_monitor/rc_monitor.h)
   add_executable(rc_monitor src/rc_monitor.cpp)
